log
Sun May 15 18:24:22 UTC 2022: 
 sudoku.c | 55 ++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 54 insertions(+), 1 deletion(-)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: expected declaration or statement at end of input
test.c:262:1: error: expected declaration or statement at end of input
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cbc8892
Sun May 15 18:24:43 UTC 2022: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
5691e00
Sun May 15 18:25:37 UTC 2022: 
 sudoku.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: expected declaration or statement at end of input
test.c:262:1: error: expected declaration or statement at end of input
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c0efc2c
Sun May 15 18:25:54 UTC 2022: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: expected declaration or statement at end of input
test.c:262:1: error: expected declaration or statement at end of input
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9d745ef
Sun May 15 18:25:57 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: expected declaration or statement at end of input
test.c:262:1: error: expected declaration or statement at end of input
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e122fc0
Sun May 15 18:26:20 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: expected declaration or statement at end of input
test.c:262:1: error: expected declaration or statement at end of input
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0db7877
Sun May 15 18:27:03 UTC 2022: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
c74f00f
Sun May 15 18:27:24 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
819ac38
Sun May 15 18:27:37 UTC 2022: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
2ce323a
Sun May 15 18:28:04 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
26261ad
Sun May 15 18:28:21 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
0238449
Sun May 15 18:33:42 UTC 2022: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  3|3
total_score: 25/70
90243cf
Sun May 15 18:44:06 UTC 2022: 
 sudoku.c | 24 ++++++++++++++++++------
 1 file changed, 18 insertions(+), 6 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:20: error: invalid initializer
     int fila[10] = 0;
                    ^
sudoku.c:51:30: error: comparison between pointer and integer [-Werror]
       if(fila[n->sudo[f][c]] == NULL) return 0;
                              ^~
sudoku.c:58:7: error: ‘f’ undeclared (first use in this function)
   for(f = 0 ; f < 9 ; f++){
       ^
sudoku.c:58:7: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:59:23: error: invalid initializer
     int columna[10] = 0;
                       ^
sudoku.c:60:9: error: ‘c’ undeclared (first use in this function)
     for(c = 0 ; c < 9 ; c++){
         ^
sudoku.c:62:66: error: expected ‘]’ before ‘)’ token
       if(columna[n->sudo[c][f] == 0 && columna[n->sudo[c][f] != 0){
                                                                  ^
sudoku.c:62:66: error: expected ‘]’ before ‘)’ token
sudoku.c:63:34: error: expected ‘]’ before ‘;’ token
         columna[n->sudo[c][f] = 1;
                                  ^
sudoku.c:64:7: error: expected ‘;’ before ‘}’ token
       }
       ^
sudoku.c:59:9: error: variable ‘columna’ set but not used [-Werror=unused-but-set-variable]
     int columna[10] = 0;
         ^~~~~~~
sudoku.c:67:20: error: invalid initializer
   int matriz[10] = 0;
                    ^
sudoku.c:67:7: error: unused variable ‘matriz’ [-Werror=unused-variable]
   int matriz[10] = 0;
       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
61bfb68
